# AIEDA

./: .env.example  .gitignore  AI交互.md  README.md  pyproject.toml  requirements.txt
apps/: data_cli.py  embedding_eval_cli.py  embedding_train_cli.py  eval_cli.py  image_text_retrieval_poc.py  patch_eval_cli.py  patch_sample_cli.py  patch_train_cli.py  train_cli.py
configs/model/: tiny_baseline.yaml
configs/training/: embedding_qwen3_0_6b.yaml  embedding_qwen3_0_6b_a4000_debug.yaml  patch_generation_fallback.yaml  patch_generation_qwen_instruct.yaml  task_v1.yaml  task_v1_geometry_only.yaml  task_v1_geometry_only_github.yaml  task_v1_github.yaml  task_v1_image_only.yaml  task_v1_image_only_github.yaml
data/fixtures/local_route_choice_lite/: dataset_summary.json
data/fixtures/local_route_choice_lite/test/: data.jsonl  metadata.json
data/fixtures/local_route_choice_lite/train/: data.jsonl  metadata.json
data/fixtures/local_route_choice_lite/val/: data.jsonl  metadata.json
data/fixtures/parsed_boards/: board_alpha.json  board_beta.json  board_gamma.json
docker/: compose.embedding.yml  embedding.Dockerfile
docs/data/: annotation_strategy_v1.md  dataset_strategy_v1.md  github_kicad_manifest_schema_v1.md  graph_text_pair_schema_v1.md  kicad_dataset_plan.md  kicad_source_policy_v1.md
docs/modules/: modality_candidates.md  model_backends.md  patch_format.md  pcb_environment.md
docs/overview/: architecture_v1.md  decision_log_v1.md  project_goal.md  roadmap_v1.md
docs/system/: github_reset_guide.md  open_source_pipeline.md  privacy_path_audit.md  repo_layout.md
docs/training/: baseline_local_route_choice_126.md  data_expansion_guide_v1.md  expansion_log.md  experiment_results_260312.md  local_route_choice_runbook_v1.md  memo_multimodal_embedding_v1.md  modality_validation.md  patch_generation_adapter_v1.md  qwen_embedding_runbook_v1.md  stage_gate_checklist.md  task_v1.md  training_strategy_v1.md
pre_design/: 260312_update.md  chatgpt_design_1.md  chatgpt_design_2.md  design-2026-01-27-2332.excalidraw  grok_design_1.md  grok_design_2.md
scripts/: audit_local_route_choice_dataset.py  build_dataset.sh  github_kicad_discovery.py  github_kicad_download.py  merge_multi_seed_embedding_report.py  merge_multi_seed_report.py  run_board_expansion.ps1  run_embedding_a4000_debug.ps1  run_embedding_docker.ps1  run_embedding_local_debug.ps1  run_embedding_remote.sh  run_experiment.sh  run_kicad_github_pipeline.ps1  run_local_route_choice_expansion.ps1  run_multi_seed_graph_text_retrieval.ps1  run_multi_seed_local_route_choice.ps1  run_stage2_image_text_poc.ps1
tests/fixtures/raw/fixture_project/: fixture_project.kicad_pcb  fixture_project.net
tests/unit/: test_data_pipeline.py  test_embedding_pipeline.py  test_patch_generation_pipeline.py  test_training_smoke.py
