[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-eda"
version = "0.1.0"
description = "AI-Enhanced EDA for PCB Routing"
authors = [
    {name = "AIEDA Team", email = "team@ai-eda.org"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.21.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
    "pillow>=9.0.0",
    "networkx>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=4.0.0",
    "pre-commit>=2.17.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
gpu = [
    "torch[cu118]>=2.0.0",
]
mlflow = [
    "mlflow>=2.0.0",
]
wandb = [
    "wandb>=0.13.0",
]
all = [
    "ai-eda[dev,gpu,mlflow,wandb]",
]

[project.scripts]
aieda-train = "apps.train_cli:main"
aieda-data = "apps.data_cli:main"
aieda-eval = "apps.eval_cli:main"
aieda-embed-train = "apps.embedding_train_cli:main"
aieda-embed-eval = "apps.embedding_eval_cli:main"
aieda-patch-train = "apps.patch_train_cli:main"
aieda-patch-eval = "apps.patch_eval_cli:main"
aieda-patch-sample = "apps.patch_sample_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages.*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
"packages" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | outputs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["packages"]
skip = ["outputs", ".venv", ".git"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "PIL.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]